@@ -8,6 +8,8 @@ ikiwiki (3.20111107) UNRELEASED; urgency=low
     difficult in yaml setup files. (smcv)
   * graphviz: Support urls embedded in the graph, by having graphviz
     generate an imagemap.
+  * graphviz: Support wikilinks embedded in the graph.
+    (Sponsored by The TOVA Company.)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 18:52:23 -0400
 
